examples/test/testpolicy2226.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2226
  namespace: namespace18
spec:
  podSelector:
    matchLabels:
      key9: value26
      key8: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value48
          key13: value15
      podSelector:
        matchLabels:
          key30: value30
